--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/utils.js"></script>
     <style>
         body {
             background-color: #d0d8e8;
@@ -62,7 +63,7 @@
         <div class="row">
             <div class="col">
                 <!-- 회사번호구분 -->
-                <label for="companyDivision" class="form-label">Company Number Classification</label>
+                <label for="companyDivision" class="form-label">Company Number Type</label>
                 <select id="companyDivision" name="companyDivision" class="form-select" required="required">
                     <option selected="selected" value="">- select -</option>
                     <option value="1">DUNS Number</option>
@@ -106,11 +107,43 @@
 
 <script>
     function submitRequest() {
-        const requestData = {
-            compNoDvCd : $("#companyDivision").val(),
-            compNo     : $("#companyNo").val(),
-            usrId      : $("#userId").val(),
-            usrPhNo    : $("#userPhone").val()
+        
+    	var vCompNoDvCd = $("#companyDivision").val();
+    	var vCompNo     = $("#companyNo").val();
+    	var vUsrId      = $("#userId").val();
+    	var vUsrPhNo    = $("#userPhone").val();
+    	
+    	if ( isNull(vCompNoDvCd) == "" ) {
+            alert("Select Company Number Type.");
+            $("#companyDivision").focus();
+    		return;
+    	}
+    	
+    	if ( isNull(vCompNo) == "" ) {
+            alert("Enter Company Number.");
+            $("#companyNo").focus();
+    		return;
+    	}
+    	
+    	if ( isNull(vUsrId) == "" ) {
+            alert("Enter ID.");
+            $("#userId").focus();
+    		return;
+    	}
+    	
+    	if ( isNull(vUsrPhNo) == "" ) {
+            alert("Enter Phone Number.");
+            $("#userPhone").focus();
+    		return;
+    	}
+    	
+    	
+    	
+    	const requestData = {
+              compNoDvCd : vCompNoDvCd
+            , compNo     : vCompNo
+            , usrId      : vUsrId
+            , usrPhNo    : vUsrPhNo
         };
 
         $.ajax({
