--- a/src/main/resources/templates/views/user/newPassword.html
+++ b/src/main/resources/templates/views/user/newPassword.html
@@ -10,6 +10,7 @@
     <link href="css/common-css.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/utils.js"></script>
     <style>
         body {
             background-color: #d0d8e8;
@@ -60,14 +61,16 @@
     <form id="passwordResetForm" name="passwordResetForm" onsubmit="return false;">
         <div class="row">
             <div class="col">
-                <label for="newPassword" class="form-label">새비밀번호</label>
-                <input id="newPassword" name="newPassword" type="password" class="form-control" placeholder="새 비밀번호 입력" required>
+            	<!-- 새비밀번호 -->
+                <label for="newPassword" class="form-label">New Password</label>
+                <input id="newPassword" name="newPassword" type="password" class="form-control" placeholder="Enter New Password" required>
             </div>
         </div>
         <div class="row mt-2">
             <div class="col">
-                <label for="confirmNewPassword" class="form-label">새비밀번호확인</label>
-                <input id="confirmNewPassword" name="confirmNewPassword" type="password" class="form-control" placeholder="비밀번호 확인" required>
+            	<!-- 새비밀번호확인 -->
+                <label for="confirmNewPassword" class="form-label">Confirm New Password</label>
+                <input id="confirmNewPassword" name="confirmNewPassword" type="password" class="form-control" placeholder="Enter Confirm New Password" required>
             </div>
         </div>
         <div class="row mt-3 text-center">
@@ -83,16 +86,30 @@
 
 <script>
     function submitPasswordChange() {
-        const newPassword = $("#newPassword").val();
-        const confirmNewPassword = $("#confirmNewPassword").val();
+        var vNewPassword        = $("#newPassword").val();
+        var vConfirmNewPassword = $("#confirmNewPassword").val();
 
-        if (newPassword !== confirmNewPassword) {
-            alert("비밀번호가 일치하지 않습니다. 다시 확인해주세요.");
+    	if ( isNull(vNewPassword) == "" ) {
+            alert("Enter New Password.");
+            $("#countryName").focus();
+    		return;
+    	}
+
+    	if ( isNull(vConfirmNewPassword) == "" ) {
+            alert("Enter Confirm New Password.");
+            $("#countryName").focus();
+    		return;
+    	}
+    	
+        if (vNewPassword !== vConfirmNewPassword) {
+            //alert("비밀번호가 일치하지 않습니다. 다시 확인해주세요.");
+            alert("The passwords do not match. Please try again.");
+            $("#countryName").focus();
             return;
         }
 
         const requestData = {
-        	usrNewPassword: newPassword
+        	usrNewPassword: vNewPassword
         };
 
         $.ajax({
@@ -103,12 +120,14 @@
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
             success: function (data) {
-                alert("비밀번호 변경 신청이 완료되었습니다.");
+                //alert("비밀번호 변경 신청이 완료되었습니다.");
+                alert("Your password change application has been completed.");
                 $("#pageName").val("login");
                 $("#form").submit();
             },
             error: function (xhr, status, error) {
-                alert("오류가 발생했습니다. 다시 시도해주세요.");
+                //alert("오류가 발생했습니다. 다시 시도해주세요.");
+                alert("An error occurred. Please try again.");
             }
         });
     }
